Test Cases added for the converter class